# openECSC-2024

./: .gitattributes  .gitignore  .prefix  README.md
cyberchallengeit-university-ctf/: README.md
cyberchallengeit-university-ctf/binary01/: challenge.json  description.md  flags.txt  solution.py  title.txt  writeup.md
cyberchallengeit-university-ctf/binary02/: authors.txt  challenge.json  deploy.json  description.md  endpoint.txt  flags.txt  title.txt  writeup.md
cyberchallengeit-university-ctf/binary03/: authors.txt  challenge.json  deploy.json  description.md  endpoint.txt  flags.txt  title.txt  writeup.md
cyberchallengeit-university-ctf/binary04/: challenge.json  deploy.json  description.md  endpoint.txt  flags.txt  title.txt  writeup.md
cyberchallengeit-university-ctf/crypto01/: authors.txt  challenge.json  description.md  flags.txt  solution.py  title.txt  writeup.md
cyberchallengeit-university-ctf/crypto02/: authors.txt  challenge.json  deploy.json  description.md  endpoint.txt  flags.txt  title.txt  writeup.md
cyberchallengeit-university-ctf/crypto03/: challenge.json  deploy.json  description.md  endpoint.txt  flags.txt  title.txt  writeup.md
cyberchallengeit-university-ctf/crypto04/: challenge.json  deploy.json  description.md  endpoint.txt  flags.txt  (+2 more)
cyberchallengeit-university-ctf/misc02/src/compiler/: Cargo.toml  Dockerfile  compiler.sh  docker-compose.yml  main.rs
olicyberit-national-final/: README.md
olicyberit-regional-ctf/: README.md
round-1/: README.md
round-2/: README.md
round-2/rev02/src/: .gitignore  CMakeLists.txt  board.cmake  coprocessor.c  gen.py  linker.ld  main.c  strip_symbols.sh  toolchain-arm-none-eabi.cmake
round-2/rev02/src/CMSIS/: CMakeLists.txt
round-2/rev02/src/CMSIS/Core/Include/: cmsis_gcc.h
round-2/rev02/src/CMSIS/Device/ARM/ARMCM3/Source/: startup_ARMCM3.c
round-2/rev02/src/LuminaryMicro/: CMakeLists.txt
round-2/rev02/src/include/: coprocessor.h  utils.h
round-3/: README.md
round-4/: README.md
round-4/pwn03/src/: .gitignore  Dockerfile.v8build  Makefile  PLAYER_README.md  README.md  args.gn  chall.sh  docker-compose.yml  expl.js
round-4/pwn03/src/patches/: 00_chall.patch  01_goal.patch  02_plz_no_unintended.patch
teamitaly-preselection-ctf/: README.md
(+2480 files in other folders)
