[package]
name = "nftp"
version = "0.1.0"
edition = "2021"

[dependencies]
goldberg = "0.1.0"
md-5 = "0.10.5"
debugoff = { version = "0.2.1" }
base64 = "0.22.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = "symbols"

[[bin]]
name = "nftp"
path = "main.rs"
